--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "react": "16.8.3",
-    "react-native": "0.59.1"
+    "react-native": "0.59.1",
+    "react-native-gesture-handler": "^1.0.0-alpha.27",
+    "react-navigation": "^3.5.0"
   },
   "devDependencies": {
     "@babel/core": "7.3.4",
